--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.33.0",
+    "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.1.8",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.428.0",
