--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tanstack/react-query-devtools": "^5.51.24",
     "@tanstack/react-table": "^8.20.1",
     "@uploadthing/react": "^6.7.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -52,6 +53,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -69,6 +71,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.51.15",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
