--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.1.8",
     "input-otp": "^1.2.4",
+    "jodit-react": "^4.1.2",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
