--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -37,11 +39,15 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
+    "@radix-ui/react-toolbar": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.51.24",
     "@tanstack/react-query-devtools": "^5.51.24",
     "@tanstack/react-table": "^8.20.1",
-    "@uploadthing/react": "^6.7.2",
+    "@tiptap/pm": "^2.7.1",
+    "@tiptap/react": "^2.7.1",
+    "@tiptap/starter-kit": "^2.7.1",
+    "@uploadthing/react": "^7.0.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -51,9 +57,8 @@
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.1.8",
     "input-otp": "^1.2.4",
-    "jodit-react": "^4.1.2",
     "lucide-react": "^0.428.0",
-    "next": "14.2.5",
+    "next": "^14.2.12",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -66,11 +71,12 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.13.2",
+    "uploadthing": "^7.0.2",
     "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
